@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.3-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-03 10:32:31, took 00:12:43, with 50 workers, on 4158 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2026-01-03 11:23:34, took 00:20:48, with 50 workers, on 4162 cases, 1 failed, 0 traces, 12 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1149,13 +1149,17 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-tls09.tst">crypt-tls09.tst</a></td><td>success</td><td>tls with mldsa</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard01.tst">crypt-wireguard01.tst</a></td><td>success</td><td>wireguard over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard02.tst">crypt-wireguard02.tst</a></td><td>success</td><td>wireguard over ipv6</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard03.tst">crypt-wireguard03.tst</a></td><td>success</td><td>wireguard over wireguard</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard03.tst">crypt-wireguard03.tst</a></td><td>#6-run-r1 tping 100 10 2.2.2.2 vrf v1</td><td>wireguard over wireguard</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard04.tst">crypt-wireguard04.tst</a></td><td>success</td><td>wireguard over loopback</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard05.tst">crypt-wireguard05.tst</a></td><td>success</td><td>wireguard over asymmetric ports</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/demo01.tst">demo01.tst</a></td><td>success</td><td>empty demo network</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/demo02.tst">demo02.tst</a></td><td>success</td><td>addressed demo network</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-ser01.tst">intop0-ser01.tst</a></td><td>success</td><td>interop0: hdlc</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-ser02.tst">intop0-ser02.tst</a></td><td>success</td><td>interop0: ppp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop0-ser03.tst">intop0-ser03.tst</a></td><td>success</td><td>interop0: framerelay ansi</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop0-ser04.tst">intop0-ser04.tst</a></td><td>success</td><td>interop0: framerelay cisco</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop0-ser05.tst">intop0-ser05.tst</a></td><td>success</td><td>interop0: framerelay q933a</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop0-ser06.tst">intop0-ser06.tst</a></td><td>success</td><td>interop0: framerelay dce</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-bgp01.tst">intop1-bgp01.tst</a></td><td>success</td><td>interop1: ebgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-bgp02.tst">intop1-bgp02.tst</a></td><td>success</td><td>interop1: ibgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-bgp03.tst">intop1-bgp03.tst</a></td><td>success</td><td>interop1: bgp locpref</td></tr>
