@@ -17800,3 +17800,10 @@ qc pass: dvbgse tunneling with mpls
 ---------------------------------- 2026-01-03 09:45:36 26.1.3
 qc pass: interop0: hdlc
 qc pass: interop0: ppp
+---------------------------------- 2026-01-03 11:02:46 26.1.3
+no qc pass: wireguard over wireguard
+failed: wireguard over wireguard
+qc pass: interop0: framerelay ansi
+qc pass: interop0: framerelay cisco
+qc pass: interop0: framerelay q933a
+qc pass: interop0: framerelay dce
